--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -3,3 +3,14 @@
     justify-content: center;
     box-shadow: 5px 5px whitesmoke;
 }
+
+.header-name {
+    font-size: 25px;
+    padding: 10px;
+}
+
+@media only screen and (max-width: 800px) {
+    .header-name {
+        font-size: 20px;
+    }
+}
