--- a/src/components/search-bar/search-bar.css
+++ b/src/components/search-bar/search-bar.css
@@ -1,6 +1,7 @@
 .search-bar {
     display: flex;
     justify-content: center;
+    flex-direction: row;
     margin-top: 100px;
     border-radius: 25px;
     background-color:#212731;
@@ -12,8 +13,24 @@
     background-color: white;
     color:  black;
     border: none;
-    margin: 100px;
-    border-radius: 5%;
+    margin-top: 100px;
+    margin-left: 100px;
+    margin-bottom: 100px;
     height: 25px;
     width: 250px;
+}
+
+.input-button {
+    background-color: gray;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    width: 50px;
+    margin-right: 100px;
+    border: none;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.input-button:hover {
+    width: 45px;
 }
