--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,15 @@
 * {
   background-color: #04070b;
   color: whitesmoke;
+  /* font-family: 'Montserrat', sans-serif; */
+
+  /* font-family: 'Open Sans', sans-serif; */
+
+  /* font-family: 'Open Sans Condensed', sans-serif; */
+
+  /* font-family: 'Roboto Mono', monospace; */
+
+  /* font-family: 'Work Sans', sans-serif;  */
+
+  font-family: 'Roboto', sans-serif;
 }
