--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,7 +1,7 @@
 .header-border {
     display: flex;
     justify-content: center;
-    box-shadow: 5px 5px whitesmoke;
+    border-bottom: 2px solid black;
 }
 
 .header-name {
