--- a/src/components/search-bar/search-bar.css
+++ b/src/components/search-bar/search-bar.css
@@ -13,6 +13,7 @@
     background-color: white;
     color:  black;
     border: none;
+    padding: 5px;
     margin-top: 100px;
     margin-left: 100px;
     margin-bottom: 100px;
@@ -32,5 +33,12 @@
 }
 
 .input-button:hover {
-    width: 45px;
+    opacity: 90%;
+}
+
+@media only screen and (max-width: 800px) {
+    .search-bar {
+        margin-left: 25px;
+        margin-right: 25px;
+    }
 }
