Added a particles component

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 * {
-  background-color: #04070b;
+  /* background-color: #04070b; */
   color: whitesmoke;
   /* font-family: 'Montserrat', sans-serif; */
 
