--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,7 @@
 .header-border {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    align-items: center;
     z-index: +1;
     top: 0;
     right: 0;
@@ -11,12 +12,30 @@
 }
 
 .header-name {
+    display: flex;
+    justify-content: center;
+    grid-column-start: 2;
     font-size: 25px;
     padding: 10px;
 }
 
+.search-button {
+    display: flex;
+    justify-content: right;
+    margin-right: 50px;
+    cursor: pointer;
+}
+
 @media only screen and (max-width: 800px) {
     .header-name {
-        font-size: 20px;
+        grid-column-start: 1;
+        font-size: 15px;
+        margin-left: 10px;
+    }
+
+    .search-button {
+        grid-column-start: 3;
+        margin-right: 15px;
+        font-size: 15px;
     }
 }
