--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -26,6 +26,10 @@
     cursor: pointer;
 }
 
+.search-button:hover {
+    opacity: 50%;
+}
+
 @media only screen and (max-width: 800px) {
     .header-name {
         grid-column-start: 1;
