Changed the mobile styling again

--- a/src/components/data/data.css
+++ b/src/components/data/data.css
@@ -55,6 +55,7 @@
     }
 
     .data-information {
-        /* margin-left: 0px; */
+        align-items: center;
+        margin-left: 0px;
     }
 }
