--- a/src/components/search-bar/search-bar.css
+++ b/src/components/search-bar/search-bar.css
@@ -45,3 +45,10 @@
         width: 350px;
     }
 }
+
+@media only screen and (max-width: 1500px) {
+    .search-bar {
+        margin-left: 50px;
+        margin-right: 50px;
+    }
+}
